Render markdown correctly in text post previews by using selftext_html.
I was mistakenly under the impression that we somehow render markdown ourselves, but turns out we just take whatever HTML reddit gives us, and we also need to do this for text previews.

Use CSS to limit the size of the previews instead of truncating in the template.

Fix table CSS.

--- a/static/style.css
+++ b/static/style.css
@@ -843,9 +843,11 @@ a.search_subreddit:hover {
 	width: calc(100% - 30px);
 }
 
+/* Used only for text post preview */
 .post_preview {
 	mask-image: linear-gradient(180deg,#000 60%,transparent);
 	opacity: 0.8;
+	max-height: 500px;
 }
 
 .post_footer {
@@ -1223,7 +1225,6 @@ input[type="submit"] {
 
 .md table {
 	margin: 5px;
-	display: block;
 	overflow-x: auto;
 }
 
